--- a/ObjectRelationalMapper/lib/build.gradle
+++ b/ObjectRelationalMapper/lib/build.gradle
@@ -37,4 +37,7 @@ dependencies {
     implementation 'org.apache.logging.log4j:log4j-core:2.16.0'
     implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.13.1'
     implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.13.1'
+    testImplementation group: 'org.mockito', name: 'mockito-core', version: '4.3.1'
+    testImplementation group: 'org.mockito', name: 'mockito-all', version: '1.10.19'
+    testImplementation group: 'org.mockito', name: 'mockito-junit-jupiter', version: '4.3.1'
     }
